# bulb-typst

./: .gitignore  Cargo.toml  README.md  justfile
docs/: bw.typ  doc.typ  justfile  palette.typ  rgb.typ
src/: lib.rs
typst/: bulb.typ  lib.typ  typst.toml
